# whoAsr

./: .cursorignore  .env  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  api_server.py  client_example.py  docker-compose.yml  funasr_server.py  main.py  package-lock.json  pyproject.toml  test_funasr_timing.py  test_simple.html  test_simple_vad.py  test_vad_debug.py  test_vad_realtime.py  test_vad_websocket.py
api/: main.py
api/core/: __init__.py  audio.py  config.py  connection.py  file_utils.py  inspect_connection.py  jieba_init.py  model.py  model_utils.py  models.py  schemas.py  settings.py
api/routers/: __init__.py  inspect_websocket.py  model.py  offline.py  punctuation.py  timestamp.py  vad.py  websocket.py
curl_test/: README.md  run_all_tests.sh  test_health.sh  test_model_management.sh  test_offline_asr.sh  test_punctuation.sh  test_timestamp.sh  test_vad.sh
docs/: AI_AGENT_INTEGRATION_GUIDE.md  API文档.md  HTTP_REST_API.md  MODEL_MANAGEMENT_API.md  README.md  WEBSOCKET_API.md  api-context-guide.md  curl命令速查.md  离线API使用指南.md
docs/ai_docs/: concurrency_analysis.md
docs/examples/: INTEGRATION_EXAMPLES.md
example/: fa_main.py  main.py  offline_main.py  punc_main.py  vad_main.py
frontend/: .env.development  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  index.tsx
frontend/src/components/: Header.tsx  ModelManagementCard.tsx  PageLayout.tsx  UnderConstruction.tsx
frontend/src/hooks/: useDocumentTitle.tsx  usePageState.ts
frontend/src/lib/: config.ts  format.ts  index.ts  spacing.ts
frontend/src/pages/: _404.tsx
scripts/: deploy.sh
(+26 files in other folders)
