[project]
name = "whoasr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "funasr==1.2.7",
    "modelscope==1.30.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "pyaudio",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "psutil",
    "python-multipart",
    "pydantic-settings",
]