[project]
name = "whoasr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "funasr==1.2.9",
    "modelscope==1.30.0",
    "torch==2.8.0+cpu",
    "torchaudio==2.8.0+cpu",
    "torchvision==0.23.0+cpu",
    "pyaudio",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "psutil",
    "python-multipart",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
